--- a/AP-Module/Maven-module/pom.xml
+++ b/AP-Module/Maven-module/pom.xml
@@ -1,16 +1,11 @@
-<?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>by.nc.school.dev</groupId>
-    <artifactId>nc-school-2017</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-  <groupId>'by.nc.school.dev'</groupId>
-  <artifactId>AP-Module</artifactId>
+  <groupId>by.nc.school.dev</groupId>
+  <artifactId>Maven-module</artifactId>
+  <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>AP-Module</name>
+  <name>Maven-module</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
