Spring MVC example has been added

--- a/Examples-Module/pom.xml
+++ b/Examples-Module/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>ServletAndJSP</module>
         <module>SpringBeans</module>
+        <module>SpringMVC</module>
     </modules>
 
 </project>
