Spring Data example has been added

--- a/Examples-Module/pom.xml
+++ b/Examples-Module/pom.xml
@@ -12,6 +12,7 @@
         <module>ServletAndJSP</module>
         <module>SpringBeans</module>
         <module>SpringMVC</module>
+        <module>SpringData</module>
     </modules>
 
 </project>
