--- a/Examples-Module/SpringData/pom.xml
+++ b/Examples-Module/SpringData/pom.xml
@@ -10,7 +10,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>SpringMVC</artifactId>
+    <artifactId>SpringData</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
@@ -20,7 +20,7 @@
     </properties>
 
     <build>
-        <finalName>SpringMVC</finalName>
+        <finalName>SpringData</finalName>
     </build>
 
     <dependencies>
@@ -61,6 +61,27 @@
             <artifactId>spring-webmvc</artifactId>
             <version>5.0.1.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.12.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.0.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-dbcp</artifactId>
+            <version>9.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.44</version>
+        </dependency>
+
     </dependencies>
 
     
